syntax = "proto3";
package ncs.user.ban;
option go_package = "grpc";

import "google/api/annotations.proto";

// Base

message Info {
    uint32 id = 1;
    int64 uid = 2;
    int64 create_time = 3;
    int64 expire_time = 4;
    int32 type = 5;
    int64 server_id = 6;
    int64 mod_id = 7;
    int64 game_id = 8;
    string reason = 9;
}

// Message

message InfoReq {
    int64 uid = 1;
}

message Info2Req {
    int64 uid = 1;
    int64 server_id = 2;
    int64 mod_id = 3;
    int64 game_id = 4;
}

message InfoResp {
    Info info = 1;
}

message AddReq {
    Info info = 1;
}

message AddResp {
}

message RemoveReq {
    uint32 id = 1;
}

message RemoveResp {
}

service Ban {
    rpc Info (InfoReq) returns (InfoResp) {
        option (google.api.http) = {
            get: "/user/ban/{uid}"
        };
    }
    rpc Add (AddReq) returns (AddResp) {
        option (google.api.http) = {
            post: "/user/ban/add"
            body: "*"
        };
    }
    rpc Remove (RemoveReq) returns (RemoveResp) {
        option (google.api.http) = {
            delete: "/user/ban/remove/{id}"
        };
    }
    rpc BanCheck (Info2Req) returns (InfoResp) {
        option (google.api.http) = {
            post: "/user/ban/check/{uid}"
            body: "*"
        };
    }
}